--- a/docs/examples/nnss_incremental_update/2a.config.compute_many_descriptors.json
+++ b/docs/examples/nnss_incremental_update/2a.config.compute_many_descriptors.json
@@ -2,7 +2,7 @@
     "descriptor_factory": {
         "PostgresDescriptorElement": {
             "binary_col": "vector",
-            "db_host": null,
+            "db_host": "/dev/shm",
             "db_name": "postgres",
             "db_pass": null,
             "db_port": null,
@@ -31,7 +31,7 @@
     },
     "descriptor_index": {
         "PostgresDescriptorIndex": {
-            "db_host": null,
+            "db_host": "/dev/shm",
             "db_name": "postgres",
             "db_pass": null,
             "db_port": null,
