Renamed DescriptorIndex to DescriptorSet
Previous naming that used "index" caused confusion about implied
functionality. Phrasing it as a "set" better represents the
container-only nature of the interface API and implementation
functionality.

--- a/docs/examples/nnss_incremental_update/2a.config.compute_many_descriptors.json
+++ b/docs/examples/nnss_incremental_update/2a.config.compute_many_descriptors.json
@@ -29,8 +29,8 @@
         },
         "type": "CaffeDescriptorGenerator"
     },
-    "descriptor_index": {
-        "PostgresDescriptorIndex": {
+    "descriptor_set": {
+        "PostgresDescriptorSet": {
             "db_host": "/dev/shm",
             "db_name": "postgres",
             "db_pass": null,
@@ -40,9 +40,9 @@
             "multiquery_batch_size": 1000,
             "pickle_protocol": -1,
             "read_only": false,
-            "table_name": "descriptor_index",
+            "table_name": "descriptor_set",
             "uuid_col": "uid"
         },
-        "type": "PostgresDescriptorIndex"
+        "type": "PostgresDescriptorSet"
     }
 }
