--- a/docs/examples/nnss_incremental_update/2b.config.train_itq.json
+++ b/docs/examples/nnss_incremental_update/2b.config.train_itq.json
@@ -1,6 +1,6 @@
 {
-    "descriptor_index": {
-        "PostgresDescriptorIndex": {
+    "descriptor_set": {
+        "PostgresDescriptorSet": {
             "db_host": "/dev/shm",
             "db_name": "postgres",
             "db_pass": null,
@@ -10,10 +10,10 @@
             "multiquery_batch_size": 1000,
             "pickle_protocol": -1,
             "read_only": false,
-            "table_name": "descriptor_index",
+            "table_name": "descriptor_set",
             "uuid_col": "uid"
         },
-        "type": "PostgresDescriptorIndex"
+        "type": "PostgresDescriptorSet"
     },
     "itq_config": {
         "bit_length": 256,
