--- a/docs/examples/nnss_incremental_update/2b.config.train_itq.json
+++ b/docs/examples/nnss_incremental_update/2b.config.train_itq.json
@@ -1,6 +1,6 @@
 {
     "descriptor_set": {
-        "PostgresDescriptorSet": {
+        "smqtk.representation.descriptor_set.postgres.PostgresDescriptorSet": {
             "db_host": "/dev/shm",
             "db_name": "postgres",
             "db_pass": null,
@@ -13,7 +13,7 @@
             "table_name": "descriptor_set",
             "uuid_col": "uid"
         },
-        "type": "PostgresDescriptorSet"
+        "type": "smqtk.representation.descriptor_set.postgres.PostgresDescriptorSet"
     },
     "itq_config": {
         "bit_length": 256,
