--- a/pytest.ini
+++ b/pytest.ini
@@ -5,10 +5,7 @@
 addopts = -lv --doctest-modules --tb=long
 testpaths =
     tests
-    python/smqtk
-norecursedirs =
-    tests/data
-    tests/utils/test_plugin_dir
+    smqtk_indexing
 doctest_optionflags =
     NORMALIZE_WHITESPACE
     IGNORE_EXCEPTION_DETAIL
