--- a/.mypy.ini
+++ b/.mypy.ini
@@ -22,6 +22,9 @@ disallow_untyped_defs = True
 ###############################################################################
 # TPL-module options
 
+[mypy-numpy]
+ignore_missing_imports = True
+
 [mypy-pkg_resources.extern]
 ignore_missing_imports = True
 
@@ -29,4 +32,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-setuptools]
+ignore_missing_imports = True
+
+[mypy-sklearn.*]
 ignore_missing_imports = True
