--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 stages:
   - test
-  - build
 
 # Global default parameters set for all jobs unless overridden by job-specific
 # configuration.
@@ -50,14 +49,34 @@ variables:
     - linux
     - docker
     - test
+    - smqtk
   before_script:
+    - export PATH=${HOME}/.local/bin:${PATH}
+    - pip install --user -U poetry
+    - command -v python
     - python --version
-    - pip install -U pip
-    - pip install -r requirements.txt
-                  -e .
+    - command -v pip
+    - pip --version
+    - command -v poetry
+    - poetry -V
+    - poetry install
 
-.pytest_cmd: &pytest_cmd
-  - pytest --cov=smqtk_indexing --cov-config=.pytest.coveragerc
+test:docs_build:
+  extends: .test_job_defaults
+  script:
+    - cd docs
+    - poetry run make html
+    - stat _build/html/index.html
+
+test:lint:
+  extends: .test_job_defaults
+  script:
+    - poetry run flake8
+
+test:typecheck:
+  extends: .test_job_defaults
+  script:
+    - poetry run mypy
 
 test:unittests:
   extends: .test_job_defaults
@@ -69,55 +88,17 @@ test:unittests:
           "python:3.8-buster",
           "python:3.9-buster"
         ]
-        OPT_REQ: [
-          "",
-          "requirements/opt_faiss_cpu.txt",
-          "requirements/opt_sklearn.txt",
+        # Extras for included, optional plugin support (space-separated lists)
+        OPT_EXTRA: [
+          "",  # no extras
+          "faiss",
+          "sklearn",
         ]
   image: $IMAGE
   script:
     - |
-      if [[ -f "$OPT_REQ" ]]
+      if [[ -n "$OPT_EXTRA" ]]
       then
-        pip install -r "$OPT_REQ"
+        poetry install --extras "$OPT_EXTRA"
       fi
-    - *pytest_cmd
-
-test:lint:
-  extends: .test_job_defaults
-  script:
-    - flake8
-
-test:typecheck:
-  extends: .test_job_defaults
-  script:
-    - mypy
-
-test:docs_build:
-  extends: .test_job_defaults
-  script:
-    - cd docs
-    - make html
-    - stat _build/html/index.html
-
-
-###############################################################################
-# Jobs -- Build
-
-.build_job_defaults:
-  stage: build
-  tags:
-    - linux
-    - docker
-    - build
-
-build:build_wheel:
-  extends:
-    - .build_job_defaults
-    - .run_automatically
-  script:
-    - python setup.py bdist_wheel
-  artifacts:
-    paths:
-      - dist/*.whl
-    when: on_success
+    - poetry run pytest --cov=smqtk_indexing --cov-config=.pytest.coveragerc
