--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ classifiers = [
 python = "^3.6"
 dataclasses = {version = "^0.8", python = "<3.7"}
 numpy = "^1.19.5"
+scipy = "^1.5.2"
 smqtk-core = ">=0.18.0"
 smqtk-dataprovider = ">=0.16.0"
 smqtk-descriptors = ">=0.18.0"
